--- a/src/app/gesture-config/gesture-config.component.html
+++ b/src/app/gesture-config/gesture-config.component.html
@@ -10,17 +10,20 @@
   <div class="ms-auto">
     <button
       type="button"
-      class="btn btn-primary"
+      class="btn btn-secondary"
       (click)="openUploadConfigModal()"
     >
-      Upload Existing Configuration
+      <i class="bi bi-upload me-1"></i>
+      Upload Configuration
     </button>
 
-    <button class="btn btn-primary mx-3" (click)="openAddGestureModal()">
+    <button class="btn btn-secondary mx-3" (click)="openAddGestureModal()">
+      <i class="bi bi-plus-circle me-1"></i>
       Add Gesture Mapping
     </button>
 
     <button class="btn btn-primary" (click)="getGeneraredCode()">
+      <i class="bi bi-rocket-takeoff me-1"></i>
       Generate Code
     </button>
   </div>
@@ -46,9 +49,12 @@
       <td class="col-2">{{ gesture.appName }}</td>
       <td class="col-2">
         <div class="d-flex align-items-center w-100 gap-2">
-          <i class="bi bi-pencil" (click)="editGestureMapping(gesture, id)"></i>
           <i
-            class="bi bi-trash-fill"
+            class="bi bi-pencil text-hover-primary"
+            (click)="editGestureMapping(gesture, id)"
+          ></i>
+          <i
+            class="bi bi-trash-fill text-hover-danger"
             (click)="openDeleteModal(deleteModal, id)"
           ></i>
         </div>
